--- a/src/components/directory/directory.styles.scss
+++ b/src/components/directory/directory.styles.scss
@@ -1,6 +1,8 @@
 .directory-menu {
     width: 100%;
+    // width of 100% shows the full size of the categories so that it looks like they are inside a box
     display: flex;
+    // display: flex shows the two categories side by side
     flex-wrap: wrap;
     justify-content: space-between;
     
