added navigation to states, cities, and the user is able to select a car. Added authentication with firebase and stored the data in firebase nosql database, firestore, and also stored the data in the state of the class

--- a/src/pages/homepage/homepage.styles.scss
+++ b/src/pages/homepage/homepage.styles.scss
@@ -4,6 +4,8 @@
   align-items: center;
   // padding is useful to prevent the components from being at the edge of the screen
   padding: 20px 80px;
+  //background-image: url("./naturesurgeproject.jpg");
+
 }
 
 
