changed the buttons into selected list, changed the name from home to TR, and made sure the routing was correct

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -12,6 +12,11 @@
       padding: 25px;
       margin-top: 10px;
     }
+
+    // .textcolor{
+    //   color: blue;
+    //   background-color: orange;
+    // }
   
     .options {
       width: 50%;
